--- a/labs/lab2/css/style.css
+++ b/labs/lab2/css/style.css
@@ -62,7 +62,7 @@ figure figcaption {
 	text-align: center;
 }
 
-@media only screen
+@media all
   and (min-device-width: 550px) {
 
 		h3 {
@@ -75,6 +75,7 @@ figure figcaption {
 			float:left;
 			width:20%;
 			height:100%;
+			min-width: 9em;
 		}
 		#content {
 			float:right;
